# tradesystem

./: .env.example  .gitignore  GEMINI.md  Improvement_plan.md  README.md  REVIEW.MD  benchmark.py  benchmark_numba.py  benchmark_numba_v2.py  benchmark_numba_v3.py  benchmark_numba_v4.py  debug_import.py  examples_kraken.py  implementation_plan.md.resolved  patch.diff  patch_imports.diff  plan.md  pyproject.toml  task.md.resolved  test_coverage.py
.agent/workflows/: improve-plan.md
.switchboard/: brain_plan_blacklist.json  kanban.db  plan_registry.json  state.json  workspace_identity.json
.switchboard/MCP/: mcp-server.js  mcp-server.js.map
.switchboard/airlock/: 20260413-1442-bundle-part-1.docx  20260413-1442-bundle-part-2.docx  20260413-1442-manifest.md  20260413-1446-bundle-part-1.docx  20260413-1446-bundle-part-2.docx  20260413-1446-bundle-part-3.docx  20260413-1446-manifest.md  20260413-1548-bundle-part-1.docx  20260413-1548-bundle-part-2.docx  20260413-1548-bundle-part-3.docx  20260413-1548-how_to_plan.md  20260413-1548-manifest.md
.switchboard/plans/: feature_plan_20260413_144249_improvements_12.md  feature_plan_20260413_164115_untitled_plan.md
.switchboard/sessions/: activity.jsonl  sess_1776002349944.json
config/: __init__.py  settings.py
data/: tradesystem.db
logs/audit/: trades_20260325.jsonl
src/: __init__.py  db.py  main_backtest.py  main_execution.py
src/backtest/: BACKTEST.MD  __init__.py  attribution.py  cost_model.py  cpcv.py  dsr.py  (+1 more)
tests/: conftest.py  test_db.py  test_debug_path.py  test_main_backtest.py  test_main_execution.py
(+85 files in other folders)
