[project]
name = "tradesystem5000"
version = "0.1.0"
description = "Sistema de trading algorítmico baseado em ML (metodologia AFML)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rafael" }]

dependencies = [
    # Core
    "numpy>=1.26,<3",
    "pandas>=2.1,<3",
    "scipy>=1.12,<2",
    "numba>=0.59,<1",

    # MetaTrader 5
    "MetaTrader5>=5.0.45",

    # Storage
    "pyarrow>=15.0",

    # ML
    "scikit-learn>=1.4,<2",
    "xgboost>=2.0,<3",
    "optuna>=3.6,<5",

    # Logging
    "loguru>=0.7,<1",

    # Stats
    "statsmodels>=0.14,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
